Fix r101532 which was so broken that I refuse to believe it was tested even once: * Feeding a fully-qualified URL through mw.util.wikiGetlink() prefixes wgServer, which breaks the link * articlefeedback-survey-disclaimer containted wiki syntax for an external link, but this doesn't work in JS * Links in the survey dialog show up in black due to some annoying JUI CSS, so even if that wiki syntax had worked, it wouldn't have produced a visually discernable link
Fixes:
* Remove mw.util.wikiGetLink() calls
* Split up articlefeedback-survey-disclaimer the way articlefeedback-form-panel-helpimprove-note is, with a separate message for the link text
** Document these split messages in qqq
* Move the link target out of a message and into a global
* Add a CSS workaround to make the privacy link in the survey dialog show up in blue rather than in black


git-svn-id: http://svn.wikimedia.org/svnroot/mediawiki/trunk@101611 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/modules/ext.articleFeedback/ext.articleFeedback.css
+++ b/modules/ext.articleFeedback/ext.articleFeedback.css
@@ -10,3 +10,7 @@
 	font-weight: normal; /* Override bold */
 	font-style: italic;
 }
+
+.articleFeedback-survey-disclaimer a {
+	color: #0645AD; /* Override blackish color set by JUI */
+}
